<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/analysisRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#050A12"
        tools:context=".ui.capturefood.SmartCaptureAnalysisActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="#050A12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="#050A12"
                app:navigationIconTint="@android:color/white"
                app:titleTextColor="@android:color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/capturedImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_smart_capture_analysis_card"
            android:contentDescription="@string/smart_capture_captured_image"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <LinearLayout
            android:id="@+id/analysisCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_smart_capture_analysis_card"
            android:orientation="vertical"
            android:padding="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capturedImage">

            <TextView
                android:id="@+id/analysisTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smart_capture_analyzing"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/analysisStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/smart_capture_stage_prepare"
                android:textColor="#D8E7FF"
                android:textSize="21sp" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:indeterminate="true"
                app:indicatorColor="@color/blue_200"
                app:trackColor="#334155"
                app:trackThickness="6dp" />

            <TextView
                android:id="@+id/modelNotesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/smart_capture_model_notes"
                android:textColor="#93C5FD"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/modelNotesScroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:fillViewport="true"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/modelNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/smart_capture_notes_waiting"
                    android:textColor="#F8FAFC"
                    android:textSize="20sp" />
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
