<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000">

    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?backgroundColor"/>

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/log_weight"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/add_weight_button"
        app:layout_constraintTop_toTopOf="@id/add_weight_button"
        app:layout_constraintBottom_toBottomOf="@id/add_weight_button"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/text_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/add_friends"
        app:layout_constraintEnd_toStartOf="@id/add_friends_button"
        app:layout_constraintTop_toTopOf="@id/add_friends_button"
        app:layout_constraintBottom_toBottomOf="@id/add_friends_button"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/text_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/add_new_food_entry"
        app:layout_constraintEnd_toStartOf="@id/add_food_button"
        app:layout_constraintTop_toTopOf="@id/add_food_button"
        app:layout_constraintBottom_toBottomOf="@id/add_food_button"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/text_smart_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/smart_capture"
        android:theme="?miniFabStyle"
        app:layout_constraintEnd_toStartOf="@id/smart_capture_button"
        app:layout_constraintTop_toTopOf="@id/smart_capture_button"
        app:layout_constraintBottom_toBottomOf="@id/smart_capture_button"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/text_samsung_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/log_food_in_samsung_health"
        android:theme="?miniFabStyle"
        app:layout_constraintEnd_toStartOf="@id/add_samsung_health_food_button"
        app:layout_constraintTop_toTopOf="@id/add_samsung_health_food_button"
        app:layout_constraintBottom_toBottomOf="@id/add_samsung_health_food_button"
        android:layout_marginEnd="12dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/log_weight"
        android:elevation="5dp"
        android:visibility="gone"
        android:id="@+id/add_weight_button"
        android:src="@drawable/ic_monitor_weight"
        android:layout_marginBottom="16dp"
        android:theme="?miniFabStyle"
        app:layout_constraintBottom_toTopOf="@id/add_friends_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_action_button"
        app:layout_constraintStart_toStartOf="@id/cancel_action_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_friends"
        android:elevation="5dp"
        android:id="@+id/add_friends_button"
        android:src="@drawable/ic_person_add"
        android:layout_marginBottom="16dp"
        android:theme="?miniFabStyle"
        app:layout_constraintBottom_toTopOf="@id/add_food_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_action_button"
        app:layout_constraintStart_toStartOf="@id/cancel_action_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_new_food_entry"
        android:elevation="5dp"
        android:src="@drawable/ic_restaurant_menu"
        android:id="@+id/add_food_button"
        android:layout_marginBottom="16dp"
        android:theme="?miniFabStyle"
        app:layout_constraintBottom_toTopOf="@id/smart_capture_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_action_button"
        app:layout_constraintStart_toStartOf="@id/cancel_action_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/smart_capture"
        android:elevation="5dp"
        android:src="@drawable/ic_auto_awesome"
        android:id="@+id/smart_capture_button"
        android:layout_marginBottom="16dp"
        android:theme="?miniFabStyle"
        app:layout_constraintBottom_toTopOf="@id/add_samsung_health_food_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_action_button"
        app:layout_constraintStart_toStartOf="@id/cancel_action_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/log_food_in_samsung_health"
        android:elevation="5dp"
        android:src="@drawable/ic_fastfood"
        android:id="@+id/add_samsung_health_food_button"
        android:layout_marginBottom="24dp"
        android:theme="?miniFabStyle"
        app:layout_constraintBottom_toTopOf="@id/cancel_action_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_action_button"
        app:layout_constraintStart_toStartOf="@id/cancel_action_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close_floating_action_buttons"
        android:elevation="5dp"
        android:rotation="135"
        android:src="@drawable/ic_add"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:theme="?closeFabStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
